rectangle collision commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin: 0;
         }
     </style>
-    <script src="collisions2.js" defer></script>
+    <script src="rectcollision.js" defer></script>
 </head>
 <body>
     
